--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -29,6 +29,7 @@ $paddingLeftRightDesktop: 50px;
 
 @media screen and (min-width: 1024px) {
   .form {
+    margin-top: 151px;
     padding: 40px $paddingLeftRightDesktop;
     width: 500px - $paddingLeftRightDesktop * 2;
 
